<project>
  <modelVersion>4.0.0</modelVersion>

  <groupId>com.winthier.sql</groupId>
  <artifactId>sql</artifactId>
  <version>0.1-SNAPSHOT</version>

  <packaging>jar</packaging>
  <name>SQL</name>
  <url>https://github.com/StarTux/SQL</url>
  <repositories>

    <!-- Paper Repo -->
    <repository>
      <id>papermc</id>
      <url>https://papermc.io/repo/repository/maven-public/</url>
    </repository>

    <!-- Cavetale Repo -->
    <repository>
      <id>cavetale</id>
      <url>https://cavetale.com/jenkins/plugin/repository/everything/</url>
    </repository>

  </repositories>
  <dependencies>

    <!-- JUnit -->
    <dependency>
      <groupId>junit</groupId>
      <artifactId>junit</artifactId>
      <version>4.13.1</version>
      <scope>test</scope>
    </dependency>

    <!-- Paper API -->
    <dependency>
      <groupId>io.papermc.paper</groupId>
      <artifactId>paper-api</artifactId>
      <version>1.18.2-R0.1-SNAPSHOT</version>
      <scope>provided</scope>
    </dependency>

    <!-- Lombok -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <version>1.18.20</version>
      <scope>provided</scope>
    </dependency>

    <!-- javax.persistence -->
    <dependency>
      <groupId>org.eclipse.persistence</groupId>
      <artifactId>javax.persistence</artifactId>
      <version>2.1.1</version>
    </dependency>

  </dependencies>
  <build>
    <finalName>${project.name}</finalName>
    <plugins>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <showDeprecation>true</showDeprecation>
          <showWarnings>true</showWarnings>
          <compilerArgs>
            <arg>-Xlint:unchecked</arg>
            <arg>-Xlint:-options</arg>
          </compilerArgs>
        </configuration>
      </plugin>

      <!-- Shade -->
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-shade-plugin</artifactId>
        <version>3.2.4</version>
        <executions>
          <execution>
            <phase>package</phase>
            <goals>
              <goal>shade</goal>
            </goals>
            <configuration>
	      <artifactSet>
		<includes>org.eclipse.persistence:javax.persistence</includes>
	      </artifactSet>
              <filters>
                <filter>
		  <artifact>org.eclipse.persistence:javax.persistence</artifact>
                  <includes>
                    <include>**/*.class</include>
                  </includes>
                </filter>
              </filters>
            </configuration>
          </execution>
        </executions>
      </plugin>

    </plugins>
  </build>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
  </properties>
</project>
